--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Step 2: 
 
-    2.1.	First line must have the cod of the book starting with %. Exemple: %01
+    2.1.	First line must have the cod of the book starting with %. Example: %01
         Note: create a enum with word file names
         •	A hard return must appear at the end of the first line, which includes unique numbers important for processing of the file.
 
@@ -56,36 +56,37 @@ Step 4: Format the text
         1.	Make sure that hard and soft returns appear where they should, as explained in the document How to handle formatting.
         Note: Soft returns should only appear in poetic text.
 
-            •	Add a hard return at the end of each line containing a heading.
+            a.	Add a hard return at the end of each line containing a heading.
 
         2.	Add special formatting characters to the text, as explained in the document How to handle formatting.
 
-            •	Place an Ampersand (&) at the start of a line with a book division.
+            a.	Place an Ampersand (&) at the start of a line with a book division.
 
-            •	Place a Dollar sign ($) at the start of a line with a superscription.
+            b.	Place a Dollar sign ($) at the start of a line with a superscription.
 
-            •	Place an At sign (@) at the start of a line with any heading other than a book division or superscription.
+            c.	Place an At sign (@) at the start of a line with any heading other than a book division or superscription.
 
-            •	Add a soft return (Shift+Enter) at the end of each line.
-            •	Add a hard return at the end of a stanza of poetic text.
+            d.	Add a soft return (Shift+Enter) at the end of each line.
 
-            •	When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
+            e.	Add a hard return at the end of a stanza of poetic text.
 
-            Place an Equals sign (=) before the first chapter or verse number where poetic text starts.
+            f.	When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
+
+            g. Place an Equals sign (=) before the first chapter or verse number where poetic text starts.
                 Note: If a Bible book begins with poetic text, place the Equals sign (=) at the beginning of the second verse containing poetic text instead. If poetic text starts in the middle of a verse, no Equals sign (=) is necessary. 
 
-            Add a hard return at the end of each chapter and group of verses that form a paragraph.
+            h. Add a hard return at the end of each chapter and group of verses that form a paragraph.
 
-            Place a Plus sign (+) at the start of a line when body text immediately follows poetic text or any type of heading.
+            i. Place a Plus sign (+) at the start of a line when body text immediately follows poetic text or any type of heading.
 
-        Footnotes
+Step 5 - Footnotes
 
-            •	Add a hard return at the end of each line with footnote text.
+    1	Add a hard return at the end of each line with footnote text.
 
-            •	Replace each footnote reference symbol with an Asterisk (*) in the body text.
+    2	Replace each footnote reference symbol with an Asterisk (*) in the body text.
 
-            •	Place a Number sign (#) at the start of a line with footnote text.
+    3	Place a Number sign (#) at the start of a line with footnote text.
 
-            Place all footnote text at the end of the Bible book.
+    4   Place all footnote text at the end of the Bible book.
 
 
