Ensure that one space exists after each chapter number

--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ Step 4: Format the text
 
             a.	✅Add curly brackets { } around the number. For example, chapter 10 would appear as {10}.
 
-            b.	Ensure that one space exists after each chapter number.
+            b.	✅Ensure that one space exists after each chapter number.
 
         4.	Verse numbers:
 
