--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,9 @@ Step 4: Format the text
 
         1.	For books containing chapters:
 
-            a.	Add chapter number one to the beginning of the first verse of the Bible book, if it has not been included in the pasted text.
+            a.	✅ Add chapter number one to the beginning of the first verse of the Bible book, if it has not been included in the pasted text.
 
-            b.	Remove the verse number from the first verse in each chapter, if it has been included in the pasted text.
+            b.	✅Remove the verse number from the first verse in each chapter, if it has been included in the pasted text.
 
             c.	If additional text, such as a heading, appears between a chapter number and the text of the first verse, move it to the line above.
 
