add Place a Dollar sign ($) at the start of a line with a superscription

--- a/requirements.txt
+++ b/requirements.txt
@@ -62,9 +62,11 @@ Step 4: Format the text
 
             a.	Place an Ampersand (&) at the start of a line with a book division.
 
-            b.	Place a Dollar sign ($) at the start of a line with a superscription.
+            b.	✅ Place a Dollar sign ($) at the start of a line with a superscription.
 
-            c.	Place an At sign (@) at the start of a line with any heading other than a book division or superscription.
+                ✅ Note: in original chapters with superscription must add $ even if there is no superscription text on the translation
+
+            c.	✅Place an At sign (@) at the start of a line with any heading other than a book division or superscription.
 
             d.	Add a soft return (Shift+Enter) at the end of each line.
 
