add Preseve formatting of footnotes

--- a/requirements.txt
+++ b/requirements.txt
@@ -91,13 +91,8 @@ Step 5 - Footnotes
 
     4   Place all footnote text at the end of the Bible book.
 
-    5   Preseve formatting
-        pegar todos span class="ft"
-        transformar em itálico:  span class="ChapterContent_fqa__Xa2yn"
+    5   ✅Preseve formatting of footnotes
 
-    6   Criar css para bold e italico
-        font-weight: bold;
-        font-style: italic;
 
 
 
