fix add superscription  when no one at the origin

--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ Step 4: Format the text
 
         2.	Add special formatting characters to the text, as explained in the document How to handle formatting.
 
-            a.	✅ Place an Ampersand (&) at the start of a line with a book division.
+            a.	✅ Place an Ampersand ➡️(&) at the start of a line with a book division.
 
             b.	✅ Place a Dollar sign ($) at the start of a line with a superscription.
 
