add utf-8 at head html

--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ Step 4: Format the text
         2.	✅ For books not containing chapters, add verse number one to the beginning of the first verse, if it has not been included in the pasted text.
 
             ✅remove chapter number 1 if it exists.
-            😒add utf-8 at head
+            ✅add utf-8 at head
                 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta></head>
 
         3.	Chapter numbers:
