--- a/requirements.txt
+++ b/requirements.txt
@@ -107,5 +107,5 @@ Step 5 - Footnotes
 
 
 BUGs
-🐞 3 João - verse 15 excedes verse limit
+✅ 3 João - verse 15 excedes verse limit
 ✅ 16 98 102 143 must have superscription
