--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,25 @@
-- name: Build with Maven
-  run: mvn -B test
+name: build
 
-- name: Generate JaCoCo Badge
-  uses: cicirello/jacoco-badge-generator@v2
-  with:
-    generate-branches-badge: true
+on:
+  push:
+    branches: [ main ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up the Java JDK
+      uses: actions/setup-java@v2
+      with:
+        java-version: '21'
+        distribution: 'adopt'
+
+    - name: Build with Maven
+      run: mvn -B test
+
+    - name: Generate JaCoCo Badge
+      id: jacoco
+      uses: cicirello/jacoco-badge-generator@v2
