--- a/requirements.txt
+++ b/requirements.txt
@@ -109,5 +109,4 @@ Step 5 - Footnotes
 BUGs
 ✅ 3 João - verse 15 excedes verse limit
 ✅ 16 98 102 143 must have superscription
-
-TODO fix NUM 16,17,29,30 and 2CO 13
+✅ fix NUM 16,17,29,30 and 2CO 13
