--- a/requirements.txt
+++ b/requirements.txt
@@ -75,17 +75,17 @@ Step 4: Format the text
 
             c.	✅Place an At sign (@) at the start of a line with any heading other than a ✅book division or ✅superscription.
 
-            d.	✅🤔Add a soft return (Shift+Enter) at the end of each line with poetic text.
+            d.	✅Add a soft return (Shift+Enter) at the end of each line with poetic text.
 
-            e.	✅🤔Add a hard return at the end of a stanza of poetic text.
+            e.	✅Add a hard return at the end of a stanza of poetic text.
 
-            f.	🤔When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
+            f.	✅When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
 
-            g. 🤔Place an Equals sign (=) before the first chapter or verse number where poetic text starts.
+            g. ➡️Place an Equals sign (=) before the 🤔first chapter or ✅verse number where poetic text starts.
 
                 🤔Note: If a Bible book begins with poetic text, place the Equals sign (=) at the beginning of the second verse containing poetic text instead.
 
-                🤔If poetic text starts in the middle of a verse, no Equals sign (=) is necessary.
+                ✅If poetic text starts in the middle of a verse, no Equals sign (=) is necessary.
 
             h. ✅Add a hard return at the end of each chapter and group of verses that form a paragraph.
 
