--- a/requirements.txt
+++ b/requirements.txt
@@ -82,14 +82,15 @@ Step 4: Format the text
             f.	✅When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
 
             g. ✅Place an Equals sign (=) before the ✅first chapter or ✅verse number where poetic text starts.
+            🐞remove space
 
-                🤔Note: If a Bible book begins with poetic text, place the Equals sign (=) at the beginning of the second verse containing poetic text instead.
+                ✅Note: If a Bible book begins with poetic text, place the Equals sign (=) at the beginning of the second verse containing poetic text instead.
 
                 ✅If poetic text starts in the middle of a verse, no Equals sign (=) is necessary.
 
             h. ✅Add a hard return at the end of each chapter and group of verses that form a paragraph.
 
-            i. 🐞Place a Plus sign (+) at the start of a line when body text (body, not poetic neither header text) immediately follows 🤔poetic text or ✅any type of heading.
+            i. ✅Place a Plus sign (+) at the start of a line when body text (body, not poetic neither header text) immediately follows ✅poetic text or ✅any type of heading.
 
 Step 5 - Footnotes
 
