--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ Step 4: Format the text
             f.	✅When poetic text starts in the middle of a verse, add a soft return (Shift+Enter) to the end of the line preceding the poetic text.
 
             g. ✅Place an Equals sign (=) before the ✅first chapter or ✅verse number where poetic text starts.
-            🐞remove space
+            ✅remove space
 
                 ✅Note: If a Bible book begins with poetic text, place the Equals sign (=) at the beginning of the second verse containing poetic text instead.
 
